--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             <p>Our Minecraft cheat client for bypassing and cheating!. Thank you for purchasing!</p>
             <button class="download-btn"
                     data-type="daytime"
-                    data-download-url="/Download/DaytimeClient">
+                    data-download-url="/Download/test.jar">
                 Download .jar Mod
             </button>
         </section>
