--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             <p>DonutSmp Mod Dupper for Spawners. Thank you for purchasing!</p>
             <button class="download-btn"
                     data-type="skeleton"
-                    data-download-url="/Download/Dupe">
+                    data-download-url="/download/Dupe">
                 Download .jar Mod
             </button>
         </section>
@@ -254,7 +254,7 @@
             <p>Our Minecraft cheat client for bypassing and cheating!. Thank you for purchasing!</p>
             <button class="download-btn"
                     data-type="daytime"
-                    data-download-url="/Download/test.jar">
+                    data-download-url="/download/test.jar">
                 Download .jar Mod
             </button>
         </section>
