--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <button class="download-btn"
                     data-type="skeleton"
                     data-download-url="/download/Dupe">
-                Download .jar Mod
+                Download for 1.21.1
             </button>
         </section>
 
@@ -255,7 +255,7 @@
             <button class="download-btn"
                     data-type="daytime"
                     data-download-url="/download/test.jar">
-                Download .jar Mod
+                Download for 1.21.1
             </button>
         </section>
     </main>
