--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- CSS Links -->
     <link href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/bootstrap.min.css" rel="stylesheet">
     <link href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/colors.css">
+    <link rel="stylesheet" href="/assets/css/colors.css">
     <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/main.css">
     
     <!-- Additional Components -->
