--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@
     <link rel="preconnect" href="https://www.googletagmanager.com/">
 
     <!-- CSS Links -->
-    <link href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/bootstrap.min.css" rel="stylesheet">
-    <link href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/aos.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/colors.css">
-    <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/main.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
     
     <!-- Additional Components -->
-    <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/alert_new.css">
-    <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/navbar.css">
-    <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/header.css">
-    <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/about_us.css">
-    <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/shop.css">
-    <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/review.css">
-    <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/footer.css">
-    <link rel="stylesheet" href="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/faq.css">
+    <link rel="stylesheet" href="/assets/css/alert_new.css">
+    <link rel="stylesheet" href="/assets/css/navbar.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/about_us.css">
+    <link rel="stylesheet" href="/assets/css/shop.css">
+    <link rel="stylesheet" href="/assets/css/review.css">
+    <link rel="stylesheet" href="/assets/css/footer.css">
+    <link rel="stylesheet" href="/assets/css/faq.css">
 
 <link rel="preconnect" href="https://ezboost.vip/"><link rel="dns-prefetch" href="https://ezboost.vip/"></head>
 
