--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
 <!-- Google tag (gtag.js) -->
-<script async="" src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/js"></script>
+<script async="" src="/assets/js/js"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -1083,10 +1083,10 @@
 
     <!--  JS  -->
 
-    <script src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/jquery-3.6.1.min.js.download" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/script.js.download"></script>
-    <script src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/bootstrap.bundle.min.js.download"></script>
-    <script src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/aos.js.download"></script>
+    <script src="/assets/js/jquery-3.6.1.min.js.download" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="/assets/js/script.js.download"></script>
+    <script src="/assets/js/bootstrap.bundle.min.js.download"></script>
+    <script src="/assets/js/aos.js.download"></script>
     <script>
         AOS.init();
     </script>
