--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="icon" href="https://ezboost.org/assets/images/favicon.ico"> <!-- icons -->
 
     <!-- SEO Meta Tags -->
-    <meta property="og:title" content="EzBoost — Buy Discord Boosts &amp;2 Cheap Discord Nitro">
-    <meta property="og:description" content="Buy discounted Discord boosts, Nitro tokens, and server upgrades. Fast delivery and fully automated service. Cheap Discord boosts for your server!">
+    <meta property="og:title" content="Daytime Market">
+    <meta property="og:description" content="Looking for the Best Hack Client? EzBoost offers Donutsmp items, Dupes, and Daytime client!">
     <meta name="description" content="Looking for the Best Hack Client? EzBoost offers Donutsmp items, Dupes, and Daytime client!">
     <meta name="keywords" content="Donutsmp skelly, buy daytimeclient, daytime client, Donutsmp items, buy donutsmp, Donut smp items, Buy donutsmp skeleton spawners, DAYTIME market, daytime shop, donutsmp buy shop, daytime cheat, daytime hack, daytime client, best mc hacks,">
     <meta name="robots" content="index, follow">
@@ -32,7 +32,7 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Daytime Market",
-        "url": "https://www.Daytimemarket.xyz/",
+        "url": "https://www.daytimemarket.xyz/",
         "description": "Buy Daytime client or Donuntsmp items!.",
         "potentialAction": {
             "@type": "SearchAction",
