--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         
                         <div class="button_section aos-init aos-animate" data-aos="zoom-in" data-aos-duration="1000">
                             <a href="https://discord.gg/daytimemarket" class="button button-primary">Join our Discord Server</a>
-                            <a id="aboutus" href="https://www.daytimemartket/download/test.jar" class="button button-secondary">Download Daytime Cheat Client</a>
+                            <a id="aboutus" href="https://www.daytimemarket.xyz/download/test.jar" class="button button-secondary">Download Daytime Cheat Client</a>
                         </div>
                     </div>
     
