--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <link rel="stylesheet" href="/assets/css/footer.css">
     <link rel="stylesheet" href="/assets/css/faq.css">
 
-<link rel="preconnect" href="https://ezboost.vip/"><link rel="dns-prefetch" href="https://ezboost.vip/"></head>
+<!-- <link rel="preconnect" href="https://ezboost.vip/"><link rel="dns-prefetch" href="https://ezboost.vip/"></head> -->
 
 
 <body ondragstart="return false" ondrag="return false" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
@@ -108,7 +108,6 @@
                         <ul>
                             <li data-aos="zoom-in" data-aos-duration="400" class="aos-init aos-animate"><a href="https://www.daytimemarket.xyz/" class="active">Home</a></li>
                             <li data-aos="zoom-in" data-aos-duration="600" class="aos-init aos-animate"><a href="https://www.daytimemarket.xyz/#aboutus">About Us</a></li>
-                            <li data-aos="zoom-in" data-aos-duration="800" class="aos-init aos-animate"><a href="https://www.daytimemarket.xyz/#faq">FAQ</a></li>
                             <li data-aos="zoom-in" data-aos-duration="1000" class="aos-init aos-animate"><a href="https://ezboost.org/terms.html">Terms</a></li>
                            <li data-aos="zoom-in" data-aos-duration="1200" class="aos-init aos-animate">
                             </li>
