--- a/index.html
+++ b/index.html
@@ -304,19 +304,19 @@
 
                     <ul>
                         <li class="shop__category active" data-category-index="1">
-                            <img src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/client.svg" alt="icon">
+                            <img src="/assets/img/client.svg" alt="icon">
                             Daytime Client
                         </li>
                         <li class="shop__category" data-category-index="2">
-                            <img src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/dupe.svg" alt="icon">
+                            <img src="/assets/img/dupe.svg" alt="icon">
                             Donut Dupes
                         </li>
                         <li class="shop__category" data-category-index="4">
-                            <img src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/items.svg" alt="icon">
+                            <img src="/assets/img/items.svg" alt="icon">
                             Donut Items
                         </li>
                         <li class="shop__category" data-category-index="3">
-                            <img src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/acc.svg" alt="icon">
+                            <img src="/assets/img/acc.svg" alt="icon">
                             Mc Accounts
                         </li>
                     </ul>
