--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
 
     <!--  JS  -->
 
-    <script src="/assets/js/jquery-3.6.1.min.js.download" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="/assets/js/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="/assets/js/script.js.download"></script>
     <script src="/assets/js/bootstrap.bundle.min.js.download"></script>
     <script src="/assets/js/aos.js.download"></script>
