--- a/index.html
+++ b/index.html
@@ -672,10 +672,9 @@
                     </h5>
 
                     <ul class="footer_link_list">
-                        <li><a href="https://ezboost.org/index.html">Home</a></li>
+                        <li><a href="https://daytimemarket.xyz/index.html">Home</a></li>
                         <li><a href="https://www.daytimemarket.xyz/#aboutus">About Us</a></li>
                         <li><a href="https://ezboost.org/terms.html">Terms</a></li>
-                         <a href="https://ezboost.app/" target="_blank" rel="noopener noreferrer">Boost Panel</a>
                     </ul>
 
                 </div>
@@ -687,7 +686,7 @@
                     </h5>
 
                 <ul class="footer_link_list">
-                    <li><a href="YOUR_DISCORD_INVITE_LINK" target="_blank">Discord Server</a></li>
+                    <li><a href="https://discord.gg/daytimemarket" target="_blank">Discord Server</a></li>
                     <li><a href="mailto:Support@DaytimeMarket.xyz">Support@Daytimemarket.xyz</a></li>
                 </ul>
 
@@ -702,7 +701,7 @@
 
     <!--  JS  -->
 
-    <script src="/assets/js/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="/assets/js/jquery-3.6.1.min.js.download" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="/assets/js/script.js.download"></script>
     <script src="/assets/js/bootstrap.bundle.min.js.download"></script>
     <script src="/assets/js/aos.js.download"></script>
