--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                     </h5>
 
                     <ul class="footer_link_list">
-                        <li><a href="https://daytimemarket.xyz/index.html">Home</a></li>
+                        <li><a href="https://www.daytimemarket.xyz/index.html">Home</a></li>
                         <li><a href="https://www.daytimemarket.xyz/#aboutus">About Us</a></li>
                         <li><a href="https://ezboost.org/terms.html">Terms</a></li>
                     </ul>
@@ -700,16 +700,17 @@
     </div>
 
     <!--  JS  -->
+<!-- jQuery (CDN recommended) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <script src="/assets/js/jquery-3.6.1.min.js.download" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="/assets/js/script.js.download"></script>
-    <script src="/assets/js/bootstrap.bundle.min.js.download"></script>
-    <script src="/assets/js/aos.js.download"></script>
-    <script>
-        AOS.init();
-    </script>
+<!-- Your JS must come AFTER jQuery -->
+<script src="/assets/js/script.js"></script>
+
+<!-- Bootstrap & AOS -->
+<script src="/assets/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/js/aos.js"></script>
     
-    <script async="" type="text/javascript" src="/assets/js/674692748a5546f49e274c2525ea2d9d93295675b653408ab21db7045e4512cb.js.download"></script>
+    <script async="" type="text/javascript" src="/assets/js/674692748a5546f49e274c2525ea2d9d93295675b653408ab21db7045e4512cb.js"></script>
 <script defer="" src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon="{&quot;rayId&quot;:&quot;94f356f31d21cedc&quot;,&quot;version&quot;:&quot;2025.6.2&quot;,&quot;r&quot;:1,&quot;token&quot;:&quot;c7962eff384147c497bd0c50ebe2cb07&quot;,&quot;serverTiming&quot;:{&quot;name&quot;:{&quot;cfExtPri&quot;:true,&quot;cfEdge&quot;:true,&quot;cfOrigin&quot;:true,&quot;cfL4&quot;:true,&quot;cfSpeedBrain&quot;:true,&quot;cfCacheStatus&quot;:true}}}" crossorigin="anonymous"></script>
 
 <div id="billgang-container"></div><iframe id="userlike-frame-e4fa1281-a858-4897-bcfe-1999e666a840" title="Empty frame" aria-hidden="true" tabindex="-1" style="position: absolute !important; opacity: 0 !important; height: 1px !important; top: 0px !important; left: 0px !important; border: none !important; display: block !important; z-index: -1 !important;" src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/saved_resource.html"></iframe><div data-test-id="userlike-container"><aside aria-label="Customer support chat"><div data-test-id="main"></div><div data-test-id="notifications"><div class="umm-anoajm"><iframe width="100%" height="100%" title="Message bubble" lang="en" style="border: 0px;" src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/saved_resource(1).html"></iframe></div></div><div data-test-id="button"><div class="umm-1pktds7" style=""><iframe width="100%" height="100%" title="Customer support chat button" lang="en" style="border: 0px;" src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/saved_resource(2).html"></iframe></div></div></aside><div data-test-id="styles"><style data-emotion="umm" data-s=""></style></div><div role="status" aria-live="polite" aria-atomic="false" style="height: 1px; width: 1px; position: absolute; margin: -1px; overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%);"></div><div role="status" aria-live="assertive" aria-atomic="false" style="height: 1px; width: 1px; position: absolute; margin: -1px; overflow: hidden; white-space: nowrap; border: 0px; padding: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%);"></div></div></body></html>
