--- a/index.html
+++ b/index.html
@@ -700,8 +700,8 @@
     </div>
 
     <!--  JS  -->
-<!-- jQuery (CDN recommended) -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- jQuery-->
+<script src="/assets/js/jquery-3.6.0.min.js"></script>
 
 <!-- Your JS must come AFTER jQuery -->
 <script src="/assets/js/script.js"></script>
@@ -709,6 +709,10 @@
 <!-- Bootstrap & AOS -->
 <script src="/assets/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/aos.js"></script>
+
+<script>
+  AOS.init();
+</script>
     
     <script async="" type="text/javascript" src="/assets/js/674692748a5546f49e274c2525ea2d9d93295675b653408ab21db7045e4512cb.js"></script>
 <script defer="" src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon="{&quot;rayId&quot;:&quot;94f356f31d21cedc&quot;,&quot;version&quot;:&quot;2025.6.2&quot;,&quot;r&quot;:1,&quot;token&quot;:&quot;c7962eff384147c497bd0c50ebe2cb07&quot;,&quot;serverTiming&quot;:{&quot;name&quot;:{&quot;cfExtPri&quot;:true,&quot;cfEdge&quot;:true,&quot;cfOrigin&quot;:true,&quot;cfL4&quot;:true,&quot;cfSpeedBrain&quot;:true,&quot;cfCacheStatus&quot;:true}}}" crossorigin="anonymous"></script>
