--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                                         </h5>
 
                                         <a data-billgang-product-path="14-boosts-|-3-months" data-billgang-domain="ezboost.vip" type="submit" class="product_href">
-                                        <img src="./_EzBoost _ Buy Discord Boosts &amp; Cheap Nitro _ Fast Delivery_files/arrow-right-circle.svg" alt="arrow">
+                                        <img src="/assets/img/arrow-right-circle.svg" alt="arrow">
                                     </a>
                                     </div>
     
