--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>⁣Daytime Market | Daytime Client &amp; Cheap Donutsmp Items | Fast Delivery</title>
-    <link rel="shortcut icon" href="https://ezboost.org/assets/images/favicon.ico" type="image/x-icon"> <!-- icons -->
-    <link rel="icon" href="https://ezboost.org/assets/images/favicon.ico"> <!-- icons -->
+    <link rel="shortcut icon" href="https://www.daytimemarket.xyz/assets/img/iconss.png" type="image/x-icon"> <!-- icons -->
+    <link rel="icon" href="https://www.daytimemarket.xyz/assets/img/iconss.png"> <!-- icons -->
 
     <!-- SEO Meta Tags -->
     <meta property="og:title" content="Daytime Market">
