--- a/index.html
+++ b/index.html
@@ -284,9 +284,9 @@
         <section id="shopnow" class="shop container">
 
             <div class="shop_header aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
-                <h5 class="shop_badge">
+              <!--  <h5 class="shop_badge">
                     PROMO 30% 🔥
-                </h5>
+                </h5> -->
                 <br>
                 <br>
                 <br>
