--- a/index.html
+++ b/index.html
@@ -711,8 +711,7 @@
 
 <!-- Bootstrap & AOS -->
 <script src="/assets/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/js/aos.js"></script>
-
+<script src="/assets/js/aos.js.download"></script>
 <script>
   AOS.init();
 </script>
