--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
 <script src="/assets/js/script.js"></script>
 
 <!-- Bootstrap & AOS -->
-<script src="/assets/js/bootstrap.bundle.min.js"></script>
+<script src="/assets/js/bootstrap.bundle.min.js.download"></script>
 <script src="/assets/js/aos.js.download"></script>
 <script>
   AOS.init();
