--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <!-- SEO Meta Tags -->
     <meta property="og:title" content="Daytime Market">
-    <meta property="og:description" content="Looking for the Best Hack Client? EzBoost offers Donutsmp items, Dupes, and Daytime client!">
-    <meta name="description" content="Looking for the Best Hack Client? EzBoost offers Donutsmp items, Dupes, and Daytime client!">
+    <meta property="og:description" content="Looking for the Best Hack Client? EzBoost offers Donutsmp items, Dupes, and Daytime Cheat client!">
+    <meta name="description" content="Looking for the Best Hack Client? EzBoost offers Donutsmp items, Dupes, and Daytime Cheat client!">
     <meta name="keywords" content="Donutsmp skelly, buy daytimeclient, daytime client, Donutsmp items, buy donutsmp, Donut smp items, Buy donutsmp skeleton spawners, DAYTIME market, daytime shop, donutsmp buy shop, daytime cheat, daytime hack, daytime client, best mc hacks,">
     <meta name="robots" content="index, follow">
     
@@ -43,13 +43,13 @@
     </script>
 
     <!-- Social Media -->
-    <meta property="og:image" content="https://www.ezboost.org/assets/images/banner.png">
+    <meta property="og:image" content="/assets/img/banner.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:site_name" content="Daytime Market">
-    <meta property="og:url" content="https://ezboost.org">
-    <link rel="canonical" href="https://ezboost.org/">
+    <meta property="og:url" content="https://www.daytimemarket.xyz/">
+    <link rel="canonical" href="https://www.daytimemarket.xyz/">
     <meta name="theme-color" content="#B28FE8">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
