--- a/terms.html
+++ b/terms.html
@@ -64,22 +64,22 @@
 
     <link rel="stylesheet" href="./sddsdd_files/colors.css">
 
-    <link rel="stylesheet" href="./sddsdd_files/main.css">
-    <link rel="stylesheet" href="./sddsdd_files/alert_new.css">
-    <link rel="stylesheet" href="./sddsdd_files/navbar.css">
-    <link rel="stylesheet" href="./sddsdd_files/header.css">
-    <link rel="stylesheet" href="./sddsdd_files/terms.css">
-    <link rel="stylesheet" href="./sddsdd_files/footer.css">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/assets/css/alert_new.css">
+    <link rel="stylesheet" href="/assets/css/navbar.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/terms.css">
+    <link rel="stylesheet" href="/assets/css/footer.css">
 
     <!-- Additional Components -->
-    <link rel="stylesheet" href="./sddsdd_files/alert_new.css">
-    <link rel="stylesheet" href="./sddsdd_files/navbar.css">
-    <link rel="stylesheet" href="./sddsdd_files/header.css">
-    <link rel="stylesheet" href="./sddsdd_files/about_us.css">
-    <link rel="stylesheet" href="./sddsdd_files/shop.css">
-    <link rel="stylesheet" href="./sddsdd_files/review.css">
-    <link rel="stylesheet" href="./sddsdd_files/footer.css">
-    <link rel="stylesheet" href="./sddsdd_files/faq.css">
+    <link rel="stylesheet" href="/assets/css/alert_new.css">
+    <link rel="stylesheet" href="/assets/css/navbar.css">
+    <link rel="stylesheet" href="/assets/css/header.css">
+    <link rel="stylesheet" href="/assets/css/about_us.css">
+    <link rel="stylesheet" href="/assets/css/shop.css">
+    <link rel="stylesheet" href="/assets/css/review.css">
+    <link rel="stylesheet" href="/assets/css/footer.css">
+    <link rel="stylesheet" href="/assets/css/faq.css">
 
 <link rel="preconnect" href="https://ezboost.vip/"><link rel="dns-prefetch" href="https://ezboost.vip/"></head>
 
@@ -374,10 +374,10 @@
     </div>
 
     <!--  JS  -->
-    <script src="./sddsdd_files/jquery-3.6.1.min.js.download" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-    <script src="./sddsdd_files/script.js.download"></script>
-    <script src="./sddsdd_files/bootstrap.bundle.min.js.download"></script>
-    <script src="./sddsdd_files/aos.js.download"></script>
+    <script src="/assets/js/jquery-3.6.1.min.js.download" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="/assets/js/script.js"></script>
+    <script src="/assets/js/bootstrap.bundle.min.js.download"></script>
+    <script src="/assets/js/aos.js.download"></script>
     <script>
         AOS.init();
     </script>
