--- a/terms.html
+++ b/terms.html
@@ -59,8 +59,8 @@
     <link rel="preconnect" href="https://www.googletagmanager.com/">
 
     <!--  CSS  -->
-    <link href="./sddsdd_files/bootstrap.min.css" rel="stylesheet">
-    <link href="./sddsdd_files/aos.css" rel="stylesheet">
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/assets/css/aos.css" rel="stylesheet">
 
     <link rel="stylesheet" href="./sddsdd_files/colors.css">
 
