--- a/terms.html
+++ b/terms.html
@@ -324,17 +324,13 @@
 
                 <div class="col-lg-6">
 
-                    <h5 class="footer_name">EzBoost</h5>
-
-                    <p class="footer_description">
-                        Get a cheap Discord experience at a fraction of the cost of the normal price
-                    </p>
+                    <h5 class="footer_name">Daytime Market</h5>
 
                     <h5 class="copyright">
-                        © 2025 EzBoost. All rights reserved
+                        © 2025 Daytime Market. All rights reserved
                     </h5>
 
-                    <h6 class="created_by">Disclaimer: This website is in no way affiliated with, authorized, maintained, sponsored or endorsed by Discord Inc. (discord.com) or any of its affiliates or subsidiaries.</h6>
+                    <h6 class="created_by">This website is not affiliated with, authorized by, maintained,endorsed by Discord Inc. (discord.com) or DonutSMP.</h6>
 
                 </div>
 
@@ -346,9 +342,9 @@
 
                     <ul class="footer_link_list">
                         <li><a href="https://www.daytimemarket.xyz/index.html">Home</a></li>
-                        <li><a href="https://www.daytimemarket.xyz/terms.html#aboutus">About Us</a></li>
+                        <li><a href="https://www.daytimemarket.xyz/index.html#aboutus">About Us</a></li>
                         <li><a href="https://www.daytimemarket.xyz/terms.html">Terms</a></li>
-                        <li> <a href="https://ezboost.app/" target="_blank" rel="noopener noreferrer">Boost Panel</a></li>
+                        <li>
                     </ul>
 
                 </div>
@@ -361,7 +357,7 @@
 
                 <ul class="footer_link_list">
                     <li><a href="https://discord.gg/daytimemarket">Discord Server</a></li>
-                    <li><a href="mailto:sales@ezboost.org">sales@ezboost.org</a></li>
+                    <li><a href="mailto:sales@ezboost.org">support@DaytimeMarket.xyz</a></li>
                 </ul>
 
 
