--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- SEO Meta Tags -->
     <meta property="og:title" content="Daytime Market">
-    <meta property="og:description" content="Looking for the Best Hack Client? EzBoost offers Donutsmp items, Dupes, and Daytime Cheat client!">
+    <meta property="og:description" content="Looking for the Best Hack Client? Daytime Market offers Donutsmp items, Dupes, and Daytime Cheat client!">
     <meta name="description" content="Looking for the Best Hack Client? EzBoost offers Donutsmp items, Dupes, and Daytime Cheat client!">
     <meta name="keywords" content="Donutsmp skelly, buy daytimeclient, daytime client, Donutsmp items, buy donutsmp, Donut smp items, Buy donutsmp skeleton spawners, DAYTIME market, daytime shop, donutsmp buy shop, daytime cheat, daytime hack, daytime client, best mc hacks,">
     <meta name="robots" content="index, follow">
